2006-09-29  Christian Persch  <chpe@cvs.gnome.org>

	R embed/mozilla/AutoEventQueue.cpp:
	R embed/mozilla/AutoEventQueue.h:
	
	Remove unused code.

2006-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_ref),
	(ephy_spinner_images_unref), (ephy_spinner_cache_data_unload),
	(ephy_spinner_images_load), (ephy_spinner_cache_get_images),
	(ephy_spinner_load_images), (ephy_spinner_unload_images),
	(ephy_spinner_init), (ephy_spinner_expose),
	(bump_spinner_frame_cb), (ephy_spinner_start),
	(ephy_spinner_remove_update_callback), (ephy_spinner_stop),
	(ephy_spinner_size_request):

	Simplify code and save some memory.

2006-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:

	Add smb: to recognised web schemes. Bug #352733.

2006-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_free),
	(ephy_spinner_cache_data_unload), (scale_to_size),
	(ephy_spinner_images_load), (ephy_spinner_cache_data_new),
	(ephy_spinner_cache_data_free), (ephy_spinner_cache_get_images),
	(ephy_spinner_cache_finalize), (ephy_spinner_cache_class_init),
	(ephy_spinner_cache_ref), (ephy_spinner_init),
	(ephy_spinner_set_size), (ephy_spinner_size_request):
	* lib/widgets/testspinner.c:

	Fix spinner with new g-i-t. Fixes bug #330415.
	Fix a crash when failing to load some icon data, Gedit bug #357456.

2006-09-24  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-window.c: (ephy_window_constructor):
	* src/ephy-lockdown.c: (update_window):
	* src/window-commands.c: (window_cmd_file_new_window), (window_cmd_file_new_tab):
	* src/window-commands.h: (window_cmd_file_new_window), (window_cmd_file_new_tab):
	* src/ephy-toolbar.c: (ephy_toolbar_set_window):
	* src/ephy-home-action.c: (ephy_home_action_activate):

	Add middle-click on New Tab/Window button to open URL on clipboard. Fix bug 149715.
	Both New Tab and New Window actions are now EphyHomeAction.
