@@ -1,3 +1,11 @@
+2006-10-01  Christian Persch  <chpe@cvs.gnome.org>
+
+	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_load),
+	(ephy_spinner_cache_get_images), (bump_spinner_frame_cb):
+	* lib/widgets/testspinner.c: (add_spinner), (main):
+
+	Fix compile warnings.
+
 2006-09-29  Christian Persch  <chpe@cvs.gnome.org>
 
 	R embed/mozilla/AutoEventQueue.cpp:
